Include BBAW logo on splash page

--- a/app/Resources/views/splash.html.twig
+++ b/app/Resources/views/splash.html.twig
@@ -33,9 +33,10 @@
         <a href="http://www.geschichte.uni-wuppertal.de/personen/wissenschafts-und-technikgeschichte/dagmar-mrozik.html">Dagmar Mrozik</a>, Wuppertal University.
       </p>
       <div class="logos">
-        <a href="http://www.uni-wuppertal.de/en/home.html"><img src="/images/logos/buw.png" alt="Bergische Universität Wuppertal"/></a>
-        <a href="http://www.izwt.uni-wuppertal.de/en/homepage.html"><img src="/images/logos/izwt.png" alt="IZWT"/></a>
-        <a href="http://www.dfg.de/en/"><img src="/images/logos/dfg.png" alt="Deutsche Forschungsgemeinschaft"/></a>
+        <a href="http://www.dfg.de/en/"><img src="{{ asset('images/logos/dfg.png') }}" alt="Deutsche Forschungsgemeinschaft" height="30" /></a>
+        <a href="http://www.bbaw.de/en/"><img src="{{ asset('images/logos/bbaw.png') }}" height="60" alt="Berlin-Brandenburg Academy of Sciences and Humanities"/></a>
+        <a href="http://www.uni-wuppertal.de/en/home.html"><img src="{{ asset('images/logos/buw.png') }}" height="30" alt="Bergische Universität Wuppertal"/></a>
+        <a href="http://www.izwt.uni-wuppertal.de/en/homepage.html"><img src="{{ asset('images/logos/izwt.png') }}" height="30" alt="IZWT"/></a>
       </div>
     </footer>
   </div><!-- /.container -->
