Fix map marker cluster images due to library moving servers

--- a/app/Resources/views/map/map.html.twig
+++ b/app/Resources/views/map/map.html.twig
@@ -221,7 +221,8 @@
             });
 
             mc = new MarkerClusterer(map, [], {
-                maxZoom: 7
+                maxZoom: 7,
+                imagePath: '{{ asset('images/m') }}'
             });
 
             refreshMarkers();
