--- a/app/Resources/less/custom.less
+++ b/app/Resources/less/custom.less
@@ -988,10 +988,33 @@ body.splash {
     margin-top: 30px;
   }
 
+  footer {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  h5 {
+    margin-top: (@line-height-computed * 1.5);
+  }
+
+  img.media-object {
+    width: 250px;
+    height: auto;
+  }
+
   div.logos a {
     margin-right: 30px;
   }
 
+  .featherlight-content {
+    padding: 0;
+    border-bottom: 0 none;
+  }
+
+  .jumbotron p {
+    margin-bottom: 0;
+    margin-top: (@line-height-computed * 1);
+  }
 }
 
 
