Improvements to search refinement
 * Fix occupation filtering (slug/title mixup)
 * Display all filters, offer hint when not applicable
 * Display filters even when only single choice available (>0/>1)
 * Fix another ONLY_FULL_GROUP_BY issue

--- a/app/Resources/views/include/aspect.html.twig
+++ b/app/Resources/views/include/aspect.html.twig
@@ -29,7 +29,7 @@
     {% elseif not aspect.occupation %}
         Occupied himself with {{ macro.subjects(aspect) }}{{ macro.places(aspect) }}
     {% else %}
-        <a href="{{ path('search', {occupation:aspect.occupation}) }}">{{ aspect.occupation }}</a>{% if aspect.subjects|length %} of {{ macro.subjects(aspect) }}{% endif %}{{ macro.places(aspect) }}
+        <a href="{{ path('search', {occupation:aspect.occupationSlug}) }}">{{ aspect.occupation }}</a>{% if aspect.subjects|length %} of {{ macro.subjects(aspect) }}{% endif %}{{ macro.places(aspect) }}
     {% endif %}
 {% else %}
     {{ aspect.description|replace_links(currentPo is defined ? [currentPo] : [])|smart_quotes }}
