--- a/app/Resources/views/search/includes/refine.html.twig
+++ b/app/Resources/views/search/includes/refine.html.twig
@@ -37,7 +37,7 @@
         </li>
     {% endfor %}
 
-    {% if filter.subjects_short|length > 1 %}
+    {% if filter.subjects_short|length > 0 %}
         {% for subj in filter.subjects_short %}
             <li><a href="{{ path('search', params|str_add('subjects', subj.id)) }}">{{ subj.title }}</a></li>
         {% endfor %}
@@ -46,108 +46,110 @@
                     <em>{{ filter.subjects_count - 7 }} more...</em>
                 </a></li>
         {% endif %}
+    {% else %}
+        <li><em class="text-muted">Not applicable</em></li>
     {% endif %}
 </ul>
 
-{% if query.occupation or filter.occupations|length > 1 %}
-    <h6>Occupation</h6>
-    <ul class="list-unstyled">
-        {% if query.occupation %}
-            <li class="restriction">
-                {{ query.occupation }}
-                {{ macro.remove_restriction(params|unset('occupation')) }}
-            </li>
-        {% elseif filter.occupations|length > 1 %}
-            {% for slug, label in filter.occupations|slice(0,7) %}
-                <li><a href="{{ path('search', params|merge({occupation: slug})) }}">{{ label }}</a></li>
-            {% endfor %}
-            {% if filter.occupations|length > 7 %}
-                <li><a href="#" data-toggle="modal" data-target="#modal-occupations">
-                        <em>{{ filter.occupations|length - 7 }} more...</em>
-                    </a></li>
-            {% endif %}
-        {% endif %}
-    </ul>
-{% endif %}
-
-{% if query.continent or filter.continents|length > 1 %}
-    <h6>Continent</h6>
-    <ul class="list-unstyled">
-        {% if query.continent %}
-            <li class="restriction">
-                <em>{{ query.continent|format_continent }}</em>
-                {{ macro.remove_restriction(params|unset('continent')) }}
-            </li>
-        {% elseif filter.continents|length > 1 %}
-            {% for c, label in filter.continents %}
-                <li><a href="{{ path('search', params|merge({continent: c})) }}">{{ label }}</a></li>
-            {% endfor %}
-        {% endif %}
-    </ul>
-{% endif %}
-
-{% if query.country or filter.countries|length > 1 %}
-    <h6>Country</h6>
-    <ul class="list-unstyled">
-        {% if query.country %}
-            <li class="restriction">
-                <em>{{ query.country|format_country }}</em>
-                {{ macro.remove_restriction(params|unset('country')) }}
-            </li>
-        {% elseif filter.countries|length > 1 %}
-            {% for c, label in filter.countries_short %}
-                <li><a href="{{ path('search', params|merge({country: c})) }}">{{ label }}</a></li>
-            {% endfor %}
-            {% if filter.countries|length > 7 %}
-                <li><a href="#" data-toggle="modal" data-target="#modal-countries">
-                        <em>{{ filter.countries|length - 7 }} more...</em>
-                    </a></li>
-            {% endif %}
-        {% endif %}
-    </ul>
-{% endif %}
-
-{% if query.radius or query.bounds or query.place or filter.places|length > 1 %}
-    <h6>Place</h6>
-
-    <ul class="list-unstyled">
-
-        {% if query.radius %}
-            <li class="restriction">
-                within {{ query.radius.radius }}&nbsp;km of<br>{{ query.radius.center.description }}
-                {{ macro.remove_restriction(params|unset(['radius', 'placeName', 'lat', 'lng'])) }}
-            </li>
-        {% endif %}
-        {% if query.bounds %}
-            <li class="restriction">
-                within specified<br><abbr class="js-popover" title="Coordinates" data-toggle="popover" data-placement="right" data-html="true" data-trigger="click" data-content="Southwest corner<br>...<br>Northeast corner<br>...">map area</abbr>
-                {{ macro.remove_restriction(params|unset('bounds')) }}
-            </li>
-        {% endif %}
-
-        {% if query.place %}
-            <li class="restriction">
-                {{ query.place.placeName }}, {{ query.place.country|format_country }}
-                {{ macro.remove_restriction(params|unset('place')) }}
-            </li>
-        {% else %}
-            {% for p in filter.places|slice(0,7) %}
-                <li><a href="{{ path('search', params|merge({place: p.slug})) }}">{{ p.placeName }}</a></li>
-            {% endfor %}
-            {% if filter.places|length > 7 %}
-                <li><a href="#" data-toggle="modal" data-target="#modal-places">
-                        <em>{{ filter.places|length - 7 }} more...</em>
-                    </a></li>
-            {% endif %}
-        {% endif %}
-    </ul>
-{% endif %}
-
-{% if filter.sources is defined and filter.sources|length > 1 %}
-    <h6>Source</h6>
-    <ul class="list-unstyled">
-        <li><a href="#" data-toggle="modal" data-target="#modal-sources">
-                <em>view list ({{ filter.sources|length }})</em>
+<h6>Occupation</h6>
+<ul class="list-unstyled">
+    {% if query.occupation %}
+        <li class="restriction">
+            {{ filter.occupations|first }}
+            {{ macro.remove_restriction(params|unset('occupation')) }}
+        </li>
+    {% elseif filter.occupations|length > 0 %}
+        {% for slug, label in filter.occupations|slice(0,7) %}
+            <li><a href="{{ path('search', params|merge({occupation: slug})) }}">{{ label }}</a></li>
+        {% endfor %}
+        {% if filter.occupations|length > 7 %}
+            <li><a href="#" data-toggle="modal" data-target="#modal-occupations">
+                <em>{{ filter.occupations|length - 7 }} more...</em>
             </a></li>
+        {% endif %}
+    {% else %}
+        <li><em class="text-muted">Not applicable</em></li>
+    {% endif %}
+</ul>
+
+<h6>Continent</h6>
+<ul class="list-unstyled">
+    {% if query.continent %}
+        <li class="restriction">
+            <em>{{ query.continent|format_continent }}</em>
+            {{ macro.remove_restriction(params|unset('continent')) }}
+        </li>
+    {% elseif filter.continents|length > 0 %}
+        {% for c, label in filter.continents %}
+            <li><a href="{{ path('search', params|merge({continent: c})) }}">{{ label }}</a></li>
+        {% endfor %}
+    {% else %}
+        <li><em class="text-muted">Not applicable</em></li>
+    {% endif %}
+</ul>
+
+<h6>Country</h6>
+<ul class="list-unstyled">
+    {% if query.country %}
+        <li class="restriction">
+            <em>{{ query.country|format_country }}</em>
+            {{ macro.remove_restriction(params|unset('country')) }}
+        </li>
+    {% elseif filter.countries|length > 0 %}
+        {% for c, label in filter.countries_short %}
+            <li><a href="{{ path('search', params|merge({country: c})) }}">{{ label }}</a></li>
+        {% endfor %}
+        {% if filter.countries|length > 7 %}
+            <li><a href="#" data-toggle="modal" data-target="#modal-countries">
+                    <em>{{ filter.countries|length - 7 }} more...</em>
+                </a></li>
+        {% endif %}
+    {% else %}
+        <li><em class="text-muted">Not applicable</em></li>
+    {% endif %}
+</ul>
+
+<h6>Place</h6>
+<ul class="list-unstyled">
+    {% if query.radius %}
+        <li class="restriction">
+            within {{ query.radius.radius }}&nbsp;km of<br>{{ query.radius.center.description }}
+            {{ macro.remove_restriction(params|unset(['radius', 'placeName', 'lat', 'lng'])) }}
+        </li>
+    {% endif %}
+    {% if query.bounds %}
+        <li class="restriction">
+            within specified<br><abbr class="js-popover" title="Coordinates" data-toggle="popover" data-placement="right" data-html="true" data-trigger="click" data-content="Southwest corner<br>...<br>Northeast corner<br>...">map area</abbr>
+            {{ macro.remove_restriction(params|unset('bounds')) }}
+        </li>
+    {% endif %}
+
+    {% if query.place %}
+        <li class="restriction">
+            {{ query.place.placeName }}, {{ query.place.country|format_country }}
+            {{ macro.remove_restriction(params|unset('place')) }}
+        </li>
+    {% elseif filter.places|length > 0 %}
+        {% for p in filter.places|slice(0,7) %}
+            <li><a href="{{ path('search', params|merge({place: p.slug})) }}">{{ p.placeName }}</a></li>
+        {% endfor %}
+        {% if filter.places|length > 7 %}
+            <li><a href="#" data-toggle="modal" data-target="#modal-places">
+                    <em>{{ filter.places|length - 7 }} more...</em>
+                </a></li>
+        {% endif %}
+    {% else %}
+        <li><em class="text-muted">Not applicable</em></li>
+    {% endif %}
+</ul>
+
+<h6>Source</h6>
+    <ul class="list-unstyled">
+        {% if filter.sources is defined and filter.sources|length > 0 %}
+            <li><a href="#" data-toggle="modal" data-target="#modal-sources">
+                    <em>view list ({{ filter.sources|length }})</em>
+            </a></li>
+        {% else %}
+            <li><em class="text-muted">Not applicable</em></li>
+        {% endif %}
     </ul>
-{% endif %}
