--- a/app/Resources/views/search/results.html.twig
+++ b/app/Resources/views/search/results.html.twig
@@ -22,7 +22,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-3 col-sm-pull-9 text-right">
+            <div class="col-sm-3 col-sm-pull-9 text-right search-refine">
                 <h3>Refine</h3>
 
                 {{ include('search/includes/refine.html.twig') }}
