--- a/app/Resources/views/default/list.html.twig
+++ b/app/Resources/views/default/list.html.twig
@@ -19,9 +19,9 @@
             <header>
                 <small class="pull-right text-muted" style="margin-top: 20px; line-height: 28px;"><em>
                         {% if jesuitview %}
-                        <a href="{{ path('list_nonjesuits') }}">{{ otherCount }} non-Jesuits</a>
+                        <a href="{{ path('list_nonjesuits') }}">show non-Jesuits ({{ otherCount }})</a>
                         {% else %}
-                        <a href="{{ path('list') }}">{{ otherCount }} Jesuits</a>
+                        <a href="{{ path('list') }}">show Jesuits ({{ otherCount }})</a>
                         {% endif %}
                     </em></small>
                 <h2>
