Mark non-jesuits on detail page

--- a/app/Resources/less/custom.less
+++ b/app/Resources/less/custom.less
@@ -1079,3 +1079,12 @@ body.splash {
     margin-bottom: 4px;
   }
 }
+
+.non-jesuit {
+  .label;
+  .label-info;
+  padding: .1em .3em;
+  font-size: 11px;
+  font-family: @font-family-sans-serif;
+  text-transform: uppercase;
+}
